# droxtools

./: LICENSE  README.md
acorn/_git/: config  index  packed-refs
c2drox/: Makefile  README.md  bsearch.nocpp.c  ghash.nocpp.c  ghash.part.nocpp.c  main.pl6
c2drox-clang/: Makefile
c2drox-clang/autom4te.cache/: output.1  requests  traces.0
c2drox-clang/src/: Makefile.am  Makefile.in  PostChildVisitor.cpp  PostChildVisitor.h  main.c  visitor.c
c2drox-haskell/: CSyntaxRead.hs  c2drox-haskell.cabal
c2drox-perl6/: CRead.pl6  c2drox  dump.pl6
c2drox-perl6/_git/: index  packed-refs
c2drox-perl6/c/: bsearch.c  hello.c
c2drox-perl6/t/: hello.t  null_main.t  struct.c
c2drox2/: c2drox  dump.pl6  t.sh
clang2drox/: Makefile.in  bootstrap.sh  config.h  config.h.in  config.status  configure  configure.ac
drox2drox/: PythonRead.drox  PythonRead.dxml  SymbolCompile.py  SymbolDecompile.py
drox2js/: JavaScriptValid.rnc  JavaScriptValid.rng  JavaScriptWrite.xsl  drox2js  names-js.sh  names-js.txt  names-rnc.sh  names-rnc.txt
drox2python/: PythonValid.rnc  PythonWrite.xsl  drox2python  names-py.sh
droxi/: .project  .pydevproject  package.json  setup.py  test.py
go2drox/: .gitignore  GoRead.go  GoSyntax.go  Makefile  README.md
js2drox/: JavaScriptAcornRead.js  JavaScriptNarcissusRead.js  README.md  acorn_main.js  esprima_main.js  js2drox  narcissus_main.js  package.json  requirements.txt
python2drox/: Makefile  PythonRead.drox  README.md  main.py  python2drox
python2drox2/: PythonRead.py  setup.py
rb2drox/: RubyRead.rb  rb2drox
rhino/: rhino.sh
(+180 files in other folders)
